Fix title on smaller screensizes

--- a/pwa/src/templates/templateParts/formHeader/FormHeaderTemplate.module.css
+++ b/pwa/src/templates/templateParts/formHeader/FormHeaderTemplate.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  flex-direction: column-reverse;
   gap: var(--gateway-ui-size-lg);
   margin-block-end: var(--gateway-ui-size-xl);
   white-space: nowrap;
@@ -29,4 +30,14 @@
 
 .buttonsContainer > *:not(:last-child) {
   margin-inline-end: var(--gateway-ui-size-xs);
+}
+@media only screen and (min-width: 992px) {
+  .container {
+    flex-direction: row;
+  }
+
+  .content {
+    overflow-y: auto;
+    width: 100%;
+  }
 }
